Removes ngTablePluginsTemplates from root app

--- a/examples/colvis/complete_colvis_example.html
+++ b/examples/colvis/complete_colvis_example.html
@@ -41,7 +41,7 @@
     </table>
 
     <script>
-        var app = angular.module('app', ['ngTable', 'ngTablePlugins', 'ngTablePluginsTemplates']).
+        var app = angular.module('app', ['ngTable', 'ngTablePlugins']).
                 controller('DemoCtrl', function ($scope, NgTableParams) {
                     var data = [{name: "Moroni", age: 50, gender: 'f'},
                         {name: "Gayla Wacker", age: 43, gender: 'm'},
