--- a/examples/colvis/complete_colvis_example.html
+++ b/examples/colvis/complete_colvis_example.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../ng-table-plugins.css">
 
     <script src="../../bower_components/jquery/dist/jquery.js"></script>
     <script src="../../bower_components/angular/angular.js"></script>
